Rework script for UI, add basic UI

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <link rel="stylesheet" href="styles\style.css">
 </head>
 
+<body>
+    <div class="body-wrapper flex-container flex-column flex-gap">
+        <div class="flex-container flex-column">
+            <p>first to five wins</p>
+            <p>You: <span class="playerScore">0</span></p>
+            <p>Computer <span class="compScore">0</span></p>
+            <p><span class="resultMessage"></span> </p>
+        </div>
+        <div class="flex-container flex-gap">
+          <img class="selection-div rock" src="/assets/rock-svgrepo-com.svg" alt="Rock">
+          <img class="selection-div paper" src="/assets/written-paper-svgrepo-com.svg" alt="Paper">
+          <img class="selection-div scissors" src="/assets/scissors-svgrepo-com.svg" alt="Scissors">
+        </div>
+    </div>
+
+</body>
+
 <script src="scripts/main.js"></script>
 
 <body>
